to_top component: Hopefully fixed visible flash before hiding on attach.

--- a/components/to_top/to_top.scss
+++ b/components/to_top/to_top.scss
@@ -39,6 +39,15 @@
     }
   }
 
+  // This class is used during construct to evaluate visibility without a brief
+  // flash of the link before it's hidden.
+  &--invisible {
+
+    opacity: 0;
+    pointer-events: none;
+
+  }
+
   &__link {
     display: block;
 
